# latinsq

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  test.yml
src/: latinsq.py
tests/: test_latinsq.py
