[metadata]
name = latinsq
version = 0.0.1
author = Ian Allison
author_email = iana@pims.math.ca
description = A package for manipulating latin squares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pimsmath/latinsq
project_urls =
    Bug Tracker = https://github.com/pimsmath/latinsq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
